syntax = "proto3";

package proto.services.task_svc.v1;

option go_package = "gen/proto/services/task-svc";

///
/// CreateTaskTemplate
///

message CreateTaskTemplateRequest {
  string name = 1; // @gotags: validate:"required"
  string description = 2; // @gotags: validate:"required"
  bool public = 3;
  optional string ward_id = 4;
  repeated SubTask subtasks = 5; // When passed, every subtask is a seperate entity

  message SubTask {
    string name = 1;
  }
}

message CreateTaskTemplateResponse {
  string id = 1;
}

service TaskTemplateService {
  rpc CreateTaskTemplate (CreateTaskTemplateRequest) returns (CreateTaskTemplateResponse) {}
}
